feat(device) detect new brand Xtouch model: X10 feat(device) detect brand Acer model: Iconia One 10 (B3-A50FHD) feat(device) detect brand Oukitel model: WP5000 feat(device) detect brand Multilaser model: F Pro feat(device) detect brand Kivi model: 50U600GR feat(device) detect brand BQ model: Practic (6030G) feat(device) detect brand Blackview model: BV4900 feat(device) detect brand Haier model: Titan T5 feat(device) detect brand Nomu model: V1600S feat(device) detect brand Vertex models: Pro P300 4G, Pro P310 4G feat(device) detect brand Coolpad models: Cool 1 (C106-9), Cool S1 (C105-E0)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -847,7 +847,7 @@ Bravis:
 
 # Acer
 Acer:
-  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])(?:[);/ ]|$)|Android.*V3[67]0(?:[);/ ]|$)|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55(?:[);/ ]|$)|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|B3-(A[125]0|A3[02]|A40FHD)|E39)(?:[);/ ]|$)|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire V5-121|Chromebook 14 \(CB3-431\)|Predator G9-793|GT-810|B1-870|B3-A4[02])(?:[);/ ]|$)'
+  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])(?:[);/ ]|$)|Android.*V3[67]0(?:[);/ ]|$)|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55(?:[);/ ]|$)|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|B3-(A[125]0|A3[02]|A40FHD)|E39)(?:[);/ ]|$)|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire V5-121|Chromebook 14 \(CB3-431\)|Predator G9-793|GT-810|B1-870|B3-A4[02]|B3-A50FHD)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # smart displays
@@ -895,7 +895,7 @@ Acer:
     - regex: 'B1-8[123567]0'
       model: 'Iconia One 8'
       device: 'tablet'
-    - regex: 'B3-A([125]0|3[02]|40FHD|4[02])'
+    - regex: 'B3-A([125]0|3[02]|[45]0FHD|4[02])'
       model: 'Iconia One 10'
       device: 'tablet'
     - regex: 'A101'
@@ -2076,7 +2076,7 @@ Asus:
       model: 'ZenFone Max Pro M1'
     - regex: '(?:ASUS_)?(X01([AB]D)|ZB633KL)(?:[);/ ]|$)'
       model: 'ZenFone Max M2'
-    - regex: '(?:ASUS_)?(?:Z00[AD]|Z008D|Z008|Z00AD[AB]?)'
+    - regex: '(?:ASUS_)?(?:Z00[AD]|Z008D|Z008|Z00AD[AB]?|ZE551ML)'
       model: 'ZenFone 2'
     - regex: '(?:ASUS_)?(?:ZenFone 2E)'
       model: 'ZenFone 2E'
@@ -2351,7 +2351,7 @@ Bluegood:
 
 # Blackview
 Blackview:
-  regex: 'Blackview|(BV([24-9]000|(5[589]|9[15689])00|6[138]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
+  regex: 'Blackview|(BV([24-9]000|4900|(5[589]|9[15689])00|6[138]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
   device: 'smartphone'
   models:
     - regex: 'A60Pro\)'
@@ -2373,7 +2373,7 @@ Blackview:
     - regex: '(BV6100)(?:[);/ ]|$)'
       model: '$1'
       device: 'phablet'
-    - regex: '(BV([24-9]000|(5[589]|9[15689])00)(?:[ _](?:PRO))?)'
+    - regex: '(BV([24-9]000|4900|(5[589]|9[15689])00)(?:[ _](?:PRO))?)'
       model: '$1'
     - regex: '(P10000(?:[ _](?:PRO))?)'
       model: '$1'
@@ -2873,7 +2873,7 @@ bq:
       model: 'Aura'
     - regex: 'BQ(ru)?[ -]6015L'
       model: 'Universe'
-    - regex: 'BQ-6010G|BQ(?:ru)?-5525'
+    - regex: 'BQ(?:S|ru)?-(?:5525|6030G|6010G)'
       model: 'Practic'
     - regex: 'BQ-6001L|BQ-6050'
       model: 'Jumbo'
@@ -3620,7 +3620,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|8190Q|1831-A0|8676-A01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C106-7|MTS-T0|cp3705A[S]?|ORL-C0)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|8190Q|1831-A0|8676-A01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]|MTS-T0|cp3705A[S]?|ORL-C0)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -3638,8 +3638,10 @@ Coolpad:
       model: 'Legacy S'
     - regex: 'MTS-T0(?:[);/ ]|$)'
       model: 'N2M'
-    - regex: 'C106-7(?:[);/ ]|$)'
+    - regex: 'C106-[79](?:[);/ ]|$)'
       model: 'Cool 1'
+    - regex: 'C105-E0(?:[);/ ]|$)'
+      model: 'Cool S1'
     - regex: 'ORL-C0(?:[);/ ]|$)'
       model: 'Cool 9'
     - regex: 'Cool_9S(?:[);/ ]|$)'
@@ -5604,7 +5606,7 @@ Hafury:
 
 # Haier
 Haier:
-  regex: 'Haier|I6_Infinity|Titan[ _]T[13]|(?:HW-)?W(?:716|757|860|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-N501-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](D71|G781|d85))'
+  regex: 'Haier|I6_Infinity|Titan[ _]T[135]|(?:HW-)?W(?:716|757|860|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-N501-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](D71|G781|d85))'
   device: 'smartphone'
   models:
     - regex: 'HM-N505-FL'
@@ -5617,7 +5619,7 @@ Haier:
       model: 'L56'
     - regex: '(?:HM-)?(G(?:152|353|552|70[01])|G(?:303)|I(?:557))'
       model: '$1'
-    - regex: '(Titan[_ ]T[13]|I6_Infinity)'
+    - regex: '(Titan[_ ]T[135]|I6_Infinity)'
       model: '$1'
     - regex: '(?:HW-)?W(716|757|860|970)(?:[);/ ]|$)'
       model: 'W$1'
@@ -9801,13 +9803,15 @@ Noblex:
 
 # Nomu
 Nomu:
-  regex: 'Nomu[ _-](?:T18|S30mini)(?:[);/ ]|$)'
+  regex: 'Nomu[ _-](?:T18|S30mini)(?:[);/ ]|$)|V1600S(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Nomu[ _-]T18(?:[);/ ]|$)'
       model: 'T18'
     - regex: 'Nomu[ _-]S30mini(?:[);/ ]|$)'
       model: 'S30 Mini'
+    - regex: '(V1600S)(?:[);/ ]|$)'
+      model: '$1'
 
 # Nomi
 Nomi:
@@ -10539,7 +10543,7 @@ Orange:
 
 # Oukitel
 Oukitel:
-  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|U20_Plus|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000| WP[5-7])(?:[);/ ]|$)'
+  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|U20_Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000| WP[5-7])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(C15|C16|K10000|K[46]000|WP[258])[ _]Pro(?:[);/ ]|$)'
@@ -10552,7 +10556,7 @@ Oukitel:
       model: '$1 Plus'
     - regex: '(K4000)[_ ]Lite(?:[);/ ]|$)'
       model: '$1 Lite'
-    - regex: '(Y4800|K10000|K[4567]000|WP2)(?:[);/ ]|$)'
+    - regex: '(Y4800|K10000|K[4567]000|WP2|WP5000)(?:[);/ ]|$)'
       model: '$1'
     - regex: ' (WP[5-7])(?:[);/ ]|$)'
       model: '$1'
@@ -15886,13 +15890,15 @@ Inoi:
 
 # Vertex
 Vertex:
-  regex: 'Lion_Dual|V709X|Baccara|Eagle[ _]4G|ImpressMAX|Impress[ _]([^;/]+)(?:Build|\))'
+  regex: 'Lion_Dual|V709X|Pro_P3[01]0_4G|Baccara|Eagle[ _]4G|ImpressMAX|Impress[ _]([^;/]+)(?:Build|\))'
   device: 'smartphone'
   models:
     - regex: '(Lion_Dual|Baccara|Eagle[ _]4G)'
       model: '$1'
     - regex: 'ImpressMAX(?:[);/ ]|$)'
       model: 'Impress Max'
+    - regex: 'Pro_P(3[01]0)_4G(?:[);/ ]|$)'
+      model: 'Pro P$1 4G'
     - regex: '(Impress[ _]([^;/]+))(?:Build|\))'
       model: '$1'
     - regex: '(V709X)'
@@ -16383,10 +16389,10 @@ Spectrum:
 
 # Kivi
 Kivi:
-  regex: '(?:24H600G[RU]|24FR50WU|24HK30B|32HR55GU|4[39]UP50GU|40UR50G[RU]|40U600G[RU]|55UP50GU|50U600GU|55UR50GR|40FK30G|40FR50BR|43UK35G|50FK30G|50UK35G|32HR50GR|55UC30G|32HK30G|40FK30G|32HR50GU|43UK30G|32FR50(?:WR|BU)|32FK3[02]G)(?:_-Ver0[0-9])?(?:[);/ ]|$)'
+  regex: '(?:24H600G[RU]|24FR50WU|24HK30B|32HR55GU|4[39]UP50GU|40UR50G[RU]|40U600G[RU]|55UP50GU|50U600G[RU]|55UR50GR|40FK30G|40FR50BR|43UK35G|50FK30G|50UK35G|32HR50GR|55UC30G|32HK30G|40FK30G|32HR50GU|43UK30G|32FR50(?:WR|BU)|32FK3[02]G)(?:_-Ver0[0-9])?(?:[);/ ]|$)'
   device: 'tv'
   models:
-    - regex: '(24H600G[RU]|24FR50WU|24HK30B|32HR55GU|4[39]UP50GU|40UR50G[RU]|40U600G[RU]|55UP50GU|50U600GU|55UR50GR|40FK30G|40FR50BR|43UK35G|50FK30G|50UK35G|32HR50GR|32FR50(?:WR|BU)|32FK3[02]G)(?:[);/ ]|$)'
+    - regex: '(24H600G[RU]|24FR50WU|24HK30B|32HR55GU|4[39]UP50GU|40UR50G[RU]|40U600G[RU]|55UP50GU|50U600G[RU]|55UR50GR|40FK30G|40FR50BR|43UK35G|50FK30G|50UK35G|32HR50GR|32FR50(?:WR|BU)|32FK3[02]G)(?:[);/ ]|$)'
       model: '$1'
     - regex: '(55UC30G|40FK30G|43UK30G|32HR50G[RU]|32HK30G|32FK32G)_-Ver0([0-9])(?:[);/ ]|$)'
       model: '$1 v$2'
@@ -16840,6 +16846,8 @@ Multilaser:
   models:
     - regex: 'Multilaser[ _]G[_ ]Pro(?:[);/ ]|$)'
       model: 'G Pro'
+    - regex: 'Multilaser[ _]F[_ ]Pro(?:[);/ ]|$)'
+      model: 'F Pro'
     - regex: 'Multilaser[ _]G[_ ]Max(?:[);/ ]|$)'
       model: 'G Max'
     - regex: 'Multilaser[ _]G(?:[);/ ]|$)'
@@ -17691,6 +17699,12 @@ Fonos:
   regex: 'Fonos-(O1)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# Xtouch
+Xtouch:
+  regex: 'Xtouch X10(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'X10'
 
 # Conquest
 Conquest:
