test: fix feat(device) detect brand Wiko model: Y50 (W-K130-TMV, W-K130-OPE, W-K130-EEA), Sunny 3 Plus (W-K200), Harry 2 (W-V600) fix(device) rename model for brand Wiko: Y50 (W-K420-EEA) => Y70 (W-K420-EEA)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14184,7 +14184,7 @@ Wexler:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P130|P200|C200SN)|WC300|W-(V7[23]0|V8[30]0|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V8[30]0|P[36]11|K420|K510|K130)-(?:TMV|TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-V600|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?Cink Peax 2'
@@ -14273,6 +14273,8 @@ Wiko:
       model: 'Sunset'
     - regex: '(?:WIKO-)?Sunny3'
       model: 'Sunny 3'
+    - regex: 'W-K200'
+      model: 'Sunny 3 Plus'
     - regex: '(?:WIKO-)?Sunny2 Plus'
       model: 'Sunny 2 Plus'
     - regex: '(?:WIKO-)?Sunny2'
@@ -14293,6 +14295,8 @@ Wiko:
       model: 'Wax'
     - regex: '(?:WIKO-)?HARRY'
       model: 'Harry'
+    - regex: 'W-V600'
+      model: 'Harry 2'
     - regex: '(?:WIKO-)?WIM Lite'
       model: 'WIM Lite'
     - regex: '(?:WIKO-)?Pulp Fab 4G'
@@ -14331,13 +14335,15 @@ Wiko:
       model: 'View Go'
     - regex: 'W-V800-(TVM|EEA|OPE)'
       model: 'View 3 Lite'
-    - regex: 'W-K420-EEA'
+    - regex: 'W-K130-(?:TMV|OPE|EEA)'
       model: 'Y50'
-    - regex: 'W-K510-(TVM|EEA|OPE|SUN)'
+    - regex: 'W-K420-EEA'
+      model: 'Y70'
+    - regex: 'W-K510-(?:TVM|EEA|OPE|SUN)'
       model: 'Y60'
-    - regex: 'W-V720-(EEA|OPE)'
+    - regex: 'W-V720-(?:EEA|OPE)'
       model: 'Y80'
-    - regex: 'W-P311-(EEA|OPE)'
+    - regex: 'W-P311-(?:EEA|OPE)'
       model: 'View 3'
     - regex: 'W-P611-EEA'
       model: 'View 3 Pro'
