fix: fix model name for Wiko brand Y50 (W-K130-TMV) => Sunny 4 (W-K130-TMV) fix: fix model name for Wiko brand Y70 (W-K420-EEA) => Y50 (W-K420-EEA)

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -8428,7 +8428,7 @@
   device:
     type: smartphone
     brand: Wiko
-    model: Y50
+    model: Sunny 4
   os_family: Android
   browser_family: Chrome
 -
