--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14281,6 +14281,8 @@ Wiko:
       model: 'Sunny 2'
     - regex: 'W-K360-TV'
       model: 'Sunny 4 Plus'
+    - regex: 'W-K130-TMV'
+      model: 'Sunny 4'
     - regex: '(?:WIKO-)?Sunny'
       model: 'Sunny'
     - regex: '(?:W_K600|Tommy3|W_C200SN)'
@@ -14335,10 +14337,10 @@ Wiko:
       model: 'View Go'
     - regex: 'W-V800-(TVM|EEA|OPE)'
       model: 'View 3 Lite'
-    - regex: 'W-K130-(?:TMV|OPE|EEA)'
+    - regex: 'W-K130-(?:OPE|EEA)'
       model: 'Y50'
     - regex: 'W-K420-EEA'
-      model: 'Y70'
+      model: 'Y50'
     - regex: 'W-K510-(?:TVM|EEA|OPE|SUN)'
       model: 'Y60'
     - regex: 'W-V720-(?:EEA|OPE)'
