feat(device) detect new brand Shtrikh-M model: Smartpos F2 feat(device) detect new brand Wiseasy model: WISENET5 feat(device) create new device type peripheral feat(device) detect brand Wieppo model: E1 feat(device) detect brand Jinga model: Win Pro
#6213

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14362,7 +14362,7 @@ Wiko:
 
 # Wieppo
 Wieppo:
-  regex: 'Wieppo (S6 Lite|S[658])(?:[);/ ]|$)'
+  regex: 'Wieppo (S6 Lite|S[658]|E1)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -17296,7 +17296,7 @@ TurboKids:
 
 # Jinga
 Jinga:
-  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|PicassoNote|Hotz[_ ]M1)(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|PicassoNote|Hotz[_ ]M1|WinPRO)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -17305,6 +17305,8 @@ Jinga:
       model: 'Hotz M1'
     - regex: 'PassPlus(?:[);/ ]|$)'
       model: 'Pass Plus'
+    - regex: 'WinPRO(?:[);/ ]|$)'
+      model: 'Win Pro'
     - regex: 'PicassoNote(?:[);/ ]|$)'
       model: 'Picasso Note'
     - regex: 'Jinga Iron(?:[);/ ]|$)'
@@ -17763,3 +17765,15 @@ Conquest:
       model: 'S$1'
     - regex: 'Conquest-F2'
       model: 'F2'
+
+# Wiseasy (wiseasy.com)
+Wiseasy:
+  regex: 'WISENET5(?:[);/ ]|$)'
+  device: 'peripheral'
+  model: 'WISENET5'
+
+# Shtrikh-M
+Shtrikh-M:
+  regex: 'SHTRIH-SMARTPOS-F2(?:[);/ ]|$)'
+  device: 'peripheral'
+  model: 'Smartpos F2'
