feat(device) detect new brand Zatec models: Wind, Gravity feat(device) detect brand UMIDIGI model: Rome X

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13676,7 +13676,7 @@ Ulefone:
 
 # UMIDIGI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|A5_Pro'
+  regex: 'UMI(?:DIGI)?[ _]|A5_Pro|ROME[_ ]X'
   device: 'smartphone'
   models:
     - regex: 'A5_Pro'
@@ -13685,6 +13685,8 @@ UMIDIGI:
       model: 'Touch X'
     - regex: 'UMI TOUCH'
       model: 'Touch'
+    - regex: 'ROME[_ ]X'
+      model: 'Rome X'
     - regex: 'UMI_(London|Diamond(?:_X)?)'
       model: '$1'
     - regex: 'UMI(?:DIGI)?[ _]([^/;)]+)(?: Build|\))'
@@ -17765,6 +17767,16 @@ Conquest:
       model: 'S$1'
     - regex: 'Conquest-F2'
       model: 'F2'
+
+# Zatec
+Zatec:
+  regex: 'ZATEC[_ ]|[ ]WIND(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'ZATEC[_ ]GRAVITY(?:[);/ ]|$)'
+      model: 'Gravity'
+    - regex: '[ ]WIND(?:[);/ ]|$)'
+      model: 'Wind'
 
 # Wiseasy (wiseasy.com)
 Wiseasy:
