fix invalid yaml

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12745,7 +12745,7 @@ Quechua:
 Ramos:
   regex: 'Ramos ?([^/;]+) Build|MOS1(?:[);/ ]|$)'
   device: 'tablet'
-  models: '$1'
+  models:
     - regex: '(MOS1)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Ramos ?([^/;]+) Build'
