feat(device) detect brand Ainol model: Novo 7 Aurora II feat(device) detect brand LeEco model: Le 2 (X527, X526)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1694,7 +1694,7 @@ Amoi:
 
 # Ainol
 Ainol:
-  regex: 'Numy|novo[0-9]|Novo 10 Hero|AX10PRO|NUMY3GAX9|NOVO10 Spark'
+  regex: 'Numy|novo[0-9]|Novo 10 Hero|AX10PRO|NUMY3GAX9|NOVO10 Spark|Aurora-II'
   device: 'tablet'
   models:
     - regex: 'Numy 3G AX1'
@@ -1713,6 +1713,8 @@ Ainol:
       model: 'Numy 3G AX9'
     - regex: '(Novo 10 Hero QuadCore)'
       model: '$1'
+    - regex: 'Aurora-II'
+      model: 'Novo 7 Aurora II'
     - regex: 'Novo7 Flame(?:[);/ ]|$)'
       model: 'Novo 7 Flame'
     - regex: 'NOVO7(?:[);/ ]|$)'
@@ -7866,7 +7868,7 @@ Ledstar:
 
 # LeEco
 LeEco:
-  regex: 'Letv|LeEco|X[89]00\+(?:[);/ ]|$)|Le ?X[0-9][^;/]+|Le Max|Le [12]|Le2[_ ]x527|X900 Build'
+  regex: 'Letv|LeEco|Le ?X[0-9][^;/]+|Le Max|Le [12]|Le2[_ ]x527|X900 Build|(?:X[89]00\+|X52[67])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'X800\+'
@@ -7879,7 +7881,7 @@ LeEco:
       model: '$1'
     - regex: 'X900 Build'
       model: 'Le X900'
-    - regex: '(?:Le ?X526|Le2[_ ]x527|Le 2)(?:[);/ ]|$)'
+    - regex: '(?:Le ?X526|Le2[_ ]x527|Le 2|X52[67])(?:[);/ ]|$)'
       model: 'Le 2'
     - regex: 'Le ?X([^;/]+) Build'
       model: 'Le X$1'
