--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -8683,3 +8683,57 @@
     model: Novo 7 Aurora II
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Z10-E) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.127 Mobile Safari/537.36 OPR/60.2.3004.55409
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 60.2.3004.55409
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Leagoo
+    model: Z10-E
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; ASUS Chromebook Flip C302) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.127 Safari/537.36 OPR/60.2.3004.55409
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 60.2.3004.55409
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Asus
+    model: Chromebook Flip C302
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; ASUS Chromebook Flip C100PA Build/R62-9901.77.0; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/56.0.2924.87 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 56.0.2924.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Asus
+    model: Chromebook Flip C100PA
+  os_family: Android
+  browser_family: Chrome
