--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2185,9 +2185,9 @@ Asus:
     - regex: '(?:Asus|Transformer) ((?:Pad |Prime )?TF[0-9a-z]+)'
       device: 'tablet'
       model: 'Transformer $1'
-    - regex: 'Chromebook Flip C100PA'
-      device: 'tablet'
-      model: 'Chromebook Flip C100PA'
+    - regex: 'Chromebook Flip (C100PA|C302)'
+      device: 'desktop'
+      model: 'Chromebook Flip $1'
 
 # Audiovox
 Audiovox:
@@ -7832,7 +7832,7 @@ LCT:
 
 # Leagoo
 Leagoo:
-  regex: 'LEAGOO[ _-]?|(?:M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _]7s|Elite 1|Venture 1)(?:[);/ ]|$)'
+  regex: 'LEAGOO[ _-]?|(?:M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _]7s|Elite 1|Venture 1|Z10-E)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'LEAGOO[- _]M8[_-]?Pro(?:[);/ ]|$)'
@@ -7851,6 +7851,8 @@ Leagoo:
       model: 'Elite 1'
     - regex: 'Venture 1(?:[);/ ]|$)'
       model: 'Venture 1'
+    - regex: '(Z10-E)(?:[);/ ]|$)'
+      model: '$1'
 
     - regex: '(Leapad[ _]7s)'
       model: '$1'
