feat(device) detect brand Blackview model: BV6900 feat(device) detect brand Philips model: S397 feat(device) added test Lenovo S90C feat(device) detect brand Doogee models: S68 Pro, S90 Pro, S95 Pro, S40 Lite, S90C

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2355,7 +2355,7 @@ Bluegood:
 
 # Blackview
 Blackview:
-  regex: 'Blackview|(BV([24-9]000|4900|(5[589]|9[15689])00|6[138]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
+  regex: 'Blackview|(BV([24-9]000|4900|(5[589]|6900|9[15689])00|6[138]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
   device: 'smartphone'
   models:
     - regex: 'A60Pro\)'
@@ -2377,7 +2377,7 @@ Blackview:
     - regex: '(BV6100)(?:[);/ ]|$)'
       model: '$1'
       device: 'phablet'
-    - regex: '(BV([24-9]000|4900|(5[589]|9[15689])00)(?:[ _](?:PRO))?)'
+    - regex: '(BV([24-9]000|6900|4900|(5[589]|9[15689])00)(?:[ _](?:PRO))?)'
       model: '$1'
     - regex: '(P10000(?:[ _](?:PRO))?)'
       model: '$1'
@@ -4134,7 +4134,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|BL[579]000(?:[);/ ]|$)|BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850'
+  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|BL[579]000(?:[);/ ]|$)|BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:68|9[05])Pro|S40Lite|(?<!Lenovo )S90C'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -4143,7 +4143,7 @@ Doogee:
       model: 'Valencia2 Y100 Pro'
     - regex: 'LEO_(DG280)'
       model: 'Leo $1'
-    - regex: '(BL[579]000)(?:[);/ ]|$)'
+    - regex: '(BL[579]000|S90C)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'BL12000 PRO'
       model: 'BL12000 Pro'
@@ -4151,6 +4151,10 @@ Doogee:
       model: 'BL5500 Lite'
     - regex: 'BL12000'
       model: 'BL12000'
+    - regex: 'S(68|9[05])Pro'
+      model: 'S$1 Pro'
+    - regex: 'S40Lite'
+      model: 'S40 Lite'
     - regex: 'KISSME-DG580'
       model: 'Kissme DG580'
     - regex: 'Hitman_DG850'
@@ -10768,11 +10772,13 @@ Pentagram:
 
 # philips
 Philips:
-  regex: 'Philips|AND1E(?:[);/ ]|$)|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E|Xenium S[25]66'
+  regex: 'Philips|AND1E(?:[);/ ]|$)|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E|Xenium S[25]66|S397'
   device: 'smartphone'
   models:
     - regex: '(?:Philips[_ ])?Xenium[ _](S[25]66|V787)(?:[);/ ]|$)'
       model: 'Xenium $1'
+    - regex: '(?:Philips[_ ])?(S397)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'AND1E(?: TV)?(?:[);/ ]|$)'
       model: 'Android TV'
       device: 'tv'
