feat(device) detect new brand Selenga models: A1, A3, A4

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2355,7 +2355,7 @@ Bluegood:
 
 # Blackview
 Blackview:
-  regex: 'Blackview|(BV([24-9]000|4900|(5[589]|6900|9[15689])00|6[138]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
+  regex: 'Blackview|(BV([24-9]000|[46]900|(5[589]|9[15689])00|6[138]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
   device: 'smartphone'
   models:
     - regex: 'A60Pro\)'
@@ -17787,6 +17787,12 @@ Zatec:
       model: 'Gravity'
     - regex: '[ ]WIND(?:[);/ ]|$)'
       model: 'Wind'
+
+# Selenga
+Selenga:
+  regex: 'Selenga[ _](A[134])(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
 
 # Wiseasy (wiseasy.com)
 Wiseasy:
