--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -8982,7 +8982,6 @@
   user_agent: Mozilla/5.0 (Linux; Android 9; X6_Soul_Xtreme) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.136 Mobile Safari/537.36
   os:
     name: Android
-    short_name: AND
     version: "9"
     platform: ""
   client:
@@ -8994,7 +8993,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: A2
+    brand: Allview
     model: X6 Soul Xtreme
   os_family: Android
   browser_family: Chrome
@@ -9002,7 +9001,6 @@
   user_agent: Mozilla/5.0 (Linux; Android 7.0; X4_Soul_Vision Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Mobile Safari/537.36
   os:
     name: Android
-    short_name: AND
     version: "7.0"
     platform: ""
   client:
@@ -9014,7 +9012,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: A2
+    brand: Allview
     model: X4 Soul Vision
   os_family: Android
   browser_family: Chrome
@@ -9022,7 +9020,6 @@
   user_agent: Mozilla/5.0 (Linux; Android 8.1.0; X5_Soul_Style Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.125 Mobile Safari/537.36
   os:
     name: Android
-    short_name: AND
     version: "8.1.0"
     platform: ""
   client:
@@ -9034,7 +9031,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: A2
+    brand: Allview
     model: X5 Soul Style
   os_family: Android
   browser_family: Chrome
