Adds detection for OPPO F17 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10344,6 +10344,8 @@ OPPO:
       model: 'F11'
     - regex: 'CPH19(?:69|87)(?:[);/ ]|$)'
       model: 'F11 Pro'
+    - regex: '(?:OPPO[ _]?)?(?:CPH2119)(?:[);/ ]|$)'
+      model: 'F17 Pro'
     - regex: '(?:OPPO[ _]?)?A1601(?:[);/ ]|$)'
       model: 'F1s'
     - regex: '(?:OPPO[ _]?)?CPH1609(?:[);/ ]|$)'
@@ -10432,7 +10434,7 @@ OPPO:
       model: 'R17'
     - regex: '(?:OPPO[ _]?)?(?:CPH1893)(?:[);/ ]|$)'
       model: 'R17 Neo'
-    - regex: '(?:OPPO[ _]?)?(?:CPH1877|CPH2119|PBD[MT]00)(?:[);/ ]|$)'
+    - regex: '(?:OPPO[ _]?)?(?:CPH1877|PBD[MT]00)(?:[);/ ]|$)'
       model: 'R17 Pro'
     - regex: '(?:OPPO[ _]?)?R8006(?:[);/ ]|$)'
       model: 'R1L'
