Improves detection for OPPO F11

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10340,7 +10340,7 @@ OPPO:
       model: 'AX7'
     - regex: '(?:OPPO[ _]?)?X9009(?:[);/ ]|$)'
       model: 'F1 Plus'
-    - regex: 'CPH1911(?:[);/ ]|$)'
+    - regex: 'CPH191[135](?:[);/ ]|$)'
       model: 'F11'
     - regex: 'CPH19(?:69|87)(?:[);/ ]|$)'
       model: 'F11 Pro'
