--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,6 +6,11 @@
 ###############
 
 # Yaani Browser
+- regex: '(?:Turkcell-)?YaaniBrowser(?:/(\d+[\.\d]+))? Mobile'
+  name: 'Yaani Browser'
+  version: '$1'
+  engine:
+    default: 'Gecko'
 - regex: '(?:Turkcell-)?YaaniBrowser(?:/(\d+[\.\d]+))?'
   name: 'Yaani Browser'
   version: '$1'
