--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2575,3 +2575,11 @@
     version: ""
     engine: ""
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Android 8.1.0; Mobile; rv:68.0) Gecko/68.0 Firefox/68.0 Turkcell-YaaniBrowser/6.1.3 Mobile Turkcell-TR
+  client:
+    type: browser
+    name: Yaani Browser
+    version: 6.1.3
+    engine: Gecko
+    engine_version: "68.0"
